tip-grupal.html

--- a/tip-grupal.html
+++ b/tip-grupal.html
@@ -50,7 +50,7 @@
             {
                 question: "Para la primera sesión de Terapia Interpersonal Grupal para la depresión, no es necesario llevar:",
                 options: ["Test de evaluación para la depresión.", "Guía sobre las notas semanales del facilitador.", "Agenda con el cronograma de las sesiones.", "Lista de verificación de tareas para facilitadores y supervisores."],
-                correct: 0
+                correct: 2
             },
             {
                 question: "¿Cuál es el primer paso de la Tarea 1 de la fase inicial: Presente a los miembros del grupo y hable de depresión, en la Terapia Interpersonal Grupal?",
@@ -60,7 +60,7 @@
             {
                 question: "¿Cuál es el objetivo de presentar a los miembros del grupo y hablar de depresión en la Terapia Interpersonal Grupal?",
                 options: ["El objetivo es que los miembros del grupo se conozcan.", "Para lograr un mayor entendimiento sobre la depresión.", "Reconocer que hay más personas que están pasando por lo mismo.", "Permite conocer la cultura de la comunidad, el entorno y las reglas."],
-                correct: 2
+                correct: 0
             },
             {
                 question: "En la Terapia Interpersonal Grupal, para invitar a los participantes a hablar sobre su vida se debe:",
@@ -152,6 +152,32 @@
                 ],
                 correct: 0
             }
+             {
+                question: "¿Cuál es una función central del análisis de la comunicación en la TerapiaInterpersonal Grupal?",
+                options: ["Bloquear emociones intensas.", "Corregir errores cognitivos.", "Castigar conductas desadaptativas.", "Examinar mensajes verbales y no verbales en interacciones recientes."],
+                correct: 3
+            },
+             {
+                question: "Durante la “tormenta de ideas” del análisis de decisiones el facilitador debe:",
+                options: ["Criticar alternativas poco realistas.", "Explorar opciones sin juzgarlas inicialmente.", "Cancelar propuestas negativas.", "Controlar las respuestas del grupo."],
+                correct: 1
+            },
+
+             {
+                question: "¿Qué finalidad tienen los juegos de roles o dramatizaciones en la TerapiaInterpersonal Grupal?",
+                options: ["Cerrar anticipadamente los conflictos.", "Ayudar a comprender sentimientos y conductas propias y ajenas.", "Corregir errores en la memoria.", "Controlar la participación grupal."],
+                correct: 1
+            },
+             {
+                question: "¿Qué propósito tiene la fase de finalización del grupo?",
+                options: ["Centrar el trabajo solo en el facilitador.", " Cancelar el seguimiento terapéutico.", "Controlar la dependencia del grupo.", "Anticipar recaídas y reforzar habilidades aprendidas."],
+                correct: 3
+            },
+            {
+                question: "Durante una sesión de la fase intermedia de la Terapia Interpersonal Grupal, el facilitadorinicia la reunión preguntando a los participantes cómo se han sentido durante la últimasemana y registra los cambios en sus síntomas depresivos. Ana comenta que, aunque engeneral se ha sentido triste, hubo un día en el que notó una mejoría en su estado de ánimo.Al explorar la situación, Ana explica que una amiga la visitó, conversaron sobre suspreocupaciones y le ayudó con los quehaceres, lo que la hizo sentirse acompañada ycomprendida. El facilitador le pide que describa con más detalles qué ocurrió durante eseencuentro y cómo se sintió antes y después de la visita, y luego invita al resto del grupo areflexionar sobre qué eventos recientes han influido positiva o negativamente en su estadode ánimo.¿Qué técnica de la Terapia Interpersonal Grupal se está utilizando principalmente eneste caso?",
+                options: ["Bloqueo de emociones negativas.", "Control de conductas desadaptativas", "Asociación del estado de ánimo con eventos interpersonales.", "Corrección de distorsiones cognitivas."],
+                correct: 2
+            },
         ];
 
         function StudyApp() {
@@ -255,4 +281,5 @@
         ReactDOM.render(<StudyApp />, document.getElementById('root'));
     </script>
 </body>
+
 </html>
