--- a/sistemica.html
+++ b/sistemica.html
@@ -89,7 +89,7 @@
                 correct: 1
             },
             {
-                question: "10. Cuando el terapeuta pide a la pareja 'discutir' sobre la depresión, el objetivo es:",
+                question: "10. Cuando el terapeuta pregunta cómo diferencian entre “irritación”, “enfado” y“depresión”, su objetivo es:",
                 options: ["Analizar y cuestionar el uso del término 'depresión'", "Confirmar quién está deprimido", "Enseñar a controlar las emociones", "Reducir la intensidad de las discusiones"],
                 correct: 0
             },
@@ -180,4 +180,5 @@
         ReactDOM.render(<App />, document.getElementById('root'));
     </script>
 </body>
+
 </html>
