--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Práctica Examen - Atención Psicológica</title>
+    <title>Práctica Examen - Intervención clínica</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -120,67 +120,33 @@
     <div class="container">
         <div class="hero">
             <div class="emoji">📚</div>
-            <h1>Examen de Atención Psicológica</h1>
-            <p>Sistema de práctica interactivo con 224 preguntas organizadas por módulos</p>
+            <h1>Examen de Intervención clínica</h1>
+            <p>90 preguntas organizadas por módulos creadas por la compañera @domegc</p>
             <p style="font-size: 14px; color: #999;">¡Mucha suerte en el exámen! 🍀</p>
         </div>
 
         <div class="modules-grid">
-            <a href="interciclo-1-practica.html" class="module-card interciclo-1">
+            <a href="dbt-modulo.html" class="module-card interciclo-1">
                 <div class="module-icon">🏥</div>
-                <div class="module-title">INTERCICLO 1</div>
-                <div class="module-subtitle">Psicología de la Salud & Hospitalaria</div>
-                <span class="module-count">45 preguntas</span>
+                <div class="module-title">DBT</div>
+                <div class="module-subtitle">Dialéctica Conductual</div>
+                <span class="module-count">30 preguntas</span>
             </a>
 
-            <a href="interciclo-2-practica.html" class="module-card interciclo-2">
+            <a href="act-modulo.html" class="module-card interciclo-2">
                 <div class="module-icon">❤️</div>
-                <div class="module-title">INTERCICLO 2</div>
-                <div class="module-subtitle">Cardiovascular & Fase Final</div>
-                <span class="module-count">34 preguntas</span>
+                <div class="module-title">ACT</div>
+                <div class="module-subtitle">Aceptación y Compromiso</div>
+                <span class="module-count">30 preguntas</span>
             </a>
 
-            <a href="duelo-practica.html" class="module-card duelo">
+            <a href="paf-modulo.html" class="module-card duelo">
                 <div class="module-icon">🕊️</div>
-                <div class="module-title">Duelo</div>
-                <div class="module-subtitle">Psicoterapia Integrativa-Relacional</div>
-                <span class="module-count">17 preguntas</span>
+                <div class="module-title">PAF</div>
+                <div class="module-subtitle">Psicoterapia Analítica Funcional</div>
+                <span class="module-count">30 preguntas</span>
             </a>
 
-            <a href="modulo-toc.html" class="module-card tcc">
-                <div class="module-icon">🧠</div>
-                <div class="module-title">TCC</div>
-                <div class="module-subtitle">Pánico, TOC, TAG, Depresión</div>
-                <span class="module-count">40 preguntas	</span>
-            </a>
-
-            <a href="tip-grupal.html" class="module-card tip">
-                <div class="module-icon">👥</div>
-                <div class="module-title">TIP Grupal</div>
-                <div class="module-subtitle">Terapia Interpersonal</div>
-                <span class="module-count">15 preguntas</span>
-            </a>
-
-            <a href="sistemica.html" class="module-card sistemica">
-                <div class="module-icon">💑</div>
-                <div class="module-title">Terapia Sistémica</div>
-                <div class="module-subtitle">Pareja y Depresión</div>
-                <span class="module-count">14 preguntas</span>
-            </a>
-
-            <a href="esquizofrenia.html" class="module-card esquizofrenia">
-                <div class="module-icon">🔬</div>
-                <div class="module-title">Esquizofrenia</div>
-                <div class="module-subtitle">Habilidades Sociales & TCC</div>
-                <span class="module-count">21 preguntas</span>
-            </a>
-
-            <a href="tercera-generacion.html" class="module-card tercera-gen">
-                <div class="module-icon">🌟</div>
-                <div class="module-title">3ª Generación</div>
-                <div class="module-subtitle">ACT, TDC & Técnicas</div>
-                <span class="module-count">29 preguntas</span>
-            </a>
         </div>
 
         <div class="info-box">
