--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
                 <span class="module-count">30 preguntas</span>
             </a>
 
+            <a href="examen-modulo.html" class="module-card duelo">
+                <div class="module-icon">🕊️</div>
+                <div class="module-title">Exámen</div>
+                <div class="module-subtitle">Simulacro del exámen</div>
+                <span class="module-count">15 preguntas</span>
+            </a>
+
         </div>
 
         <div class="info-box">
